<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">emo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- pm2.5数据 Service -->
    <string name="service_pm2dot5_uuid">0000fff0-0000-1000-8000-00805f9b34fb</string>
    <!-- 特征值 -->
    <string name="pm2dot5_fff1">fff1</string>
    <string name="pm2dot5_fff2">fff2</string>
    <string name="pm2dot5_fff3">fff3</string>
    <string name="pm2dot5_fff6">fff6</string>

    <!-- 电池数据 Service -->
    <string name="service_battery_uuid">0000180f-0000-1000-8000-00805f9b34fb</string>
    <!-- 特征值 -->
    <string name="battery_level_uuid">00002a19-0000-1000-8000-00805f9b34fb</string>

    <string name="remain_battery">剩余电量%d%%</string>
    <string name="remain_battery_02">剩余电量%d%%，请尽快充电</string>
	<string name="remain_battery_lessthan_10">剩余电量10%，请尽快充电</string>
    <string name="two_title">连续监测 PM2.5</string>
    
    <string name="device_name" >PM2.5TESTER</string>
    <string name="ble_not_supported">对不起，该设备不支持蓝牙低功耗功能。</string>
    <string name="error_bluetooth_not_supported">对不起，该设备不支持蓝牙功能。</string>
    <string name="ble_disconnected_emo_device">与emo断开连接，正在重连...</string>
	<string name="ble_connect_emo_device_initiated_failure">初始化连接emo失败，正在重连...</string>
	<string name="ble_connect_emo_device_timeout">连接emo操作超时，正在重连...</string>
	<string name="ble_emo_services_discovered_timeout">发现emo服务超时，正在重连...</string>

	<string name="pageone_do_not_open_bluetooth">未打开蓝牙</string>
	<string name="pageone_haze_value_init">未与emo建立连接</string>
	<string name="pageone_scan_emo">正在搜索emo</string>
	<string name="pageone_connect_emo">正在和emo建立连接</string>
    <string name="pageone_get_device_type_from_emo">正在确定设备类型</string>
	<string name="pageone_get_data_from_emo">正在获取监测数据</string>

	<string name="pageone_emo_not_nearby_warn">emo需要在手机附近才能正常工作</string>
	<string name="pageone_battery_warn">最近一次使用时电量较低</string>
    
    <string name="pagetwo_tip">emo将每10分钟自动记录一次数据\n最长可记录12小时</string>
	<string name="pagetwo_not_connected_emo_tip">还没有和emo建立连接</string>

	<!--<string name="pagetwo_gather_state_no_text">未检测</string>-->
	<string name="pagetwo_gather_state_yes_text">监测中</string>

	<string name="pagetwo_gather_operat_button_start_text">开始</string>
	<string name="pagetwo_gather_operat_button_stop_text">结束</string>

	<!--微博相关信息-->
	<string name="weibo_toast_auth_canceled">取消授权</string>
	<string name="weibo_toast_auth_failed">授权失败</string>
	<string name="weibo_toast_auth_success">授权成功</string>

	<!-- 分享成功失败的 Toast -->
	<string name="weibo_toast_share_success">分享成功</string>
	<string name="weibo_toast_share_failed">分享失败</string>
	<string name="weibo_toast_share_canceled">取消分享</string>

	<string name="weibo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
	<string name="weibo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>

	<string name="device_warm_up">传感器初始化中，实时监测数据不稳定，请等待...</string>
	<string name="device_warm_up_title">设备正在预热中...</string>
	<!--微信相关信息-->
	<string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unknown">发送返回</string>

	<!-- 对话框文字 -->
	<string name="dialog_ok">结束</string>
	<string name="dialog_cancel">取消</string>

	<string name="data_from">数据来自 AIRBURG emo</string>
	<string name="haze_unit">μg/m³</string>

	<string name="review_option_title">提示</string>
	<string name="review_option_info">是否允许打开GPS以便获取当前位置</string>
	<string name="review_option_yes">允许</string>
	<string name="review_option_no">拒绝</string>

	<string name="positive_button_text">确定</string>
	<string name="exception_text">手机蓝牙出现异常。</string>

</resources>
