<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#36BBCD">

	<!--标题部分-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="56dp">

        <ImageButton
            android:id="@+id/btnPagerTwoCaption"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:background="@drawable/toolbar_icon_caption"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:visibility="invisible"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/two_title"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_18"/>

        <ImageButton
            android:id="@+id/btnPagerTwoShare"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
			android:visibility="invisible"
            android:background="@drawable/toolbar_icon_share"
            android:layout_alignParentRight="true"
            />
		<ImageButton
			android:id="@+id/btnPagerTwoShare_disabled"
			android:layout_width="24dp"
			android:layout_height="24dp"
			android:layout_marginRight="16dp"
			android:layout_centerVertical="true"
			android:background="@drawable/toolbar_icon_share_disabled"
			android:layout_alignParentRight="true"
			/>

    </RelativeLayout>
	
	<View android:layout_width="wrap_content" android:layout_height="4dp"/>

	<!--内容部分-->
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<!--<ImageView-->
		<!--android:layout_width="wrap_content"-->
		<!--android:layout_height="wrap_content"-->
		<!--android:src="@drawable/coordinate"/>-->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|top"
			android:gravity="top|center_horizontal"
			android:orientation="vertical">
			<!--画图内容-->
			<cn.airburg.emo.view.GraphView
				android:id="@+id/gvPagerTwoView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="8dp" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:textColor="#FFF"
				android:alpha="0.6"
				android:textSize="16dp"
				android:text="@string/pagetwo_tip"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="4dp" />

			<LinearLayout android:id="@+id/layoutPagerTwoStateText"
			              android:layout_width="wrap_content"
			              android:layout_height="20dp"
			              android:gravity="center_horizontal|center_vertical"
			              style="@style/rectangle_gray_bg"
			              android:alpha="0.3"
				          android:visibility="invisible"
			              android:orientation="vertical">

				<TextView android:id="@+id/tvPagerTwoState"
				          android:layout_width="wrap_content"
				          android:layout_height="wrap_content"
				          android:textSize="@dimen/text_size_12"
				          android:text="@string/pagetwo_gather_state_yes_text"
				          android:textColor="#FFF"/>

			</LinearLayout>


		</LinearLayout>

		<Button android:id="@+id/btnPagerTwoStartOrStop"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/botton_start"
		        android:layout_alignParentBottom="true"
		        android:layout_centerInParent="true"
		        android:layout_marginBottom="40dp"
		        android:text="@string/pagetwo_gather_operat_button_start_text"/>
	</RelativeLayout>

</LinearLayout>